# taxi_demand_predictor

./: README.md  pyproject.toml
.github/workflows/: feature_pipeline.yml
data/transformed/: option_1_rides_per_hour_ts_2022_01.parquet  option_2_agg_rides_all_slots_ts_2022_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb
src/: config.py  data.py  data_split.py  libs.py  model_4_weeks.py  model_4_weeks_fe_fi.py  model_8_weeks.py  paths.py  plot.py
