[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["bormaley999 <nickkur89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
lux-api = "^0.5.1"
seaborn = "^0.12.2"
requests = "^2.28.2"
pyarrow = "^11.0.0"
tqdm = "^4.65.0"
plotly = "^5.13.1"
scikit-learn = "^1.2.2"
xgboost = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
